tests/invalid/Parsing_Invalid_1.whiley
function f(int x) -> (int r):
    //
    return x

function f(int y) -> (int r):
    //
    return y
